--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
     "name": "Tomasz Zabłocki",
     "email": "tomasz.zablocki@gmail.com"
   },
-  "main": "src/index.ts",
+  "main": "lib/index",
+  "types": "lib/index",
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "yarn dev",
-    "dev": "nodemon --watch 'src/**/*' -e ts --exec ts-node src/index.ts"
+    "tsc": "tsc -p .",
+    "tsc:watch": "tsc -p . --noEmit -w",
+    "test": "jest --config jest.config.js --no-cache",
+    "test:watch": "jest --config jest.config.js --watch",
+    "test:coverage": "jest --config jest.config "
   },
   "repository": {
     "type": "git",
@@ -25,19 +29,26 @@
     "delay": 1000
   },
   "dependencies": {
+    "redux-orm": "^0.13.3",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.11",
     "@types/node": "^11.13.7",
     "cross-env": "^5.2.0",
+    "dts-jest": "^23.0.0",
     "husky": "^1.3.1",
+    "jest": "^24.7.1",
     "nodemon": "^1.18.11",
     "prettier": "^1.17.0",
     "pretty-quick": "^1.10.0",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.1.0",
     "tslib": "^1.9.3",
-    "typescript": "^3.4.4",
-    "utility-types": "^3.5.0"
+    "typedoc": "^0.14.2",
+    "typesafe-actions": "^4.2.1",
+    "typescript": "^3.4.5",
+    "utility-types": "^3.7.0"
   },
   "husky": {
     "hooks": {
