--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-orm-typesafe-schema",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": {
     "name": "Tomasz Zabłocki",
     "email": "tomasz.zablocki@gmail.com"
@@ -10,8 +10,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "yarn tsc",
-    "tsc": "tsc -p ./tsconfig-build.json",
+    "tsc": "tsc -p ./tsconfig.build.json",
     "tsc:watch": "tsc -p . --noEmit -w",
     "test": "jest --config jest.config.js --no-cache",
     "test:watch": "jest --config jest.config.js --watch",
@@ -39,6 +38,7 @@
     "dts-jest": "^23.0.0",
     "husky": "^1.3.1",
     "jest": "^24.7.1",
+    "jest-junit": "^6.4.0",
     "jest-watch-suspend": "^1.1.2",
     "prettier": "^1.17.0",
     "pretty-quick": "^1.10.0",
