--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,9 +1,10 @@
 {
-  "extends": "./tsconfig-base.json",
+  "extends": "./tsconfig.json",
   "exclude": [
     "src/spec/*.ts",
     "src/**/*.snap.ts",
     "src/**/*.typespec.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "lib/**/*"
   ]
 }
