--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,57 @@
 {
-  "extends:": "./tsconfig-base.json"
+  "compilerOptions": {
+    "lib": [
+      "es2017",
+      "esnext"
+    ],
+    "listFiles": false,
+    "listEmittedFiles": false,
+    "traceResolution": false,
+    "diagnostics": false,
+    "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "pretty": true,
+    "removeComments": true,
+    "stripInternal": true,
+    "declaration": true,
+    "importHelpers": true,
+    "resolveJsonModule": true,
+    "noEmit": false,
+    "target": "es5",
+    "module": "commonjs",
+    "noImplicitAny": true,
+    "moduleResolution": "node",
+    "allowUnreachableCode": false,
+    "outDir": "lib",
+    "sourceMap": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./typings"
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "types/*"
+      ],
+      "@spec/*": [
+        "./src/spec/*"
+      ]
+    },
+    "rootDir": "src"
+  },
+  "typedocOptions": {
+    "mode": "modules",
+    "out": "docs"
+  },
+  "types": [
+    "jest"
+  ],
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "src/**/*.snap.ts",
+    "lib/**/*"
+  ]
 }
