--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,14 @@ jobs:
           name: "Execute tests"
           command: |
             ./cc-test-reporter before-build
-            yarn test -- --ci --collectCoverage
+            yarn test:ci
             ./cc-test-reporter after-build --coverage-input-type lcov --exit-code $?
+          environment:
+            JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
       - store_test_results:
           path: reports
       - store_artifacts:
           path: reports
       - store_artifacts:
-          path: coverage
+          path: ./coverage/lcov.info
+          prefix: tests
