--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "jest --config jest.config.js --no-cache",
     "test:ci": "jest --config jest.config.js --collectCoverage --ci --runInBand --reporters=default --reporters=jest-junit",
     "test:watch": "jest --config jest.config.js --watch",
-    "test:coverage": "jest --config jest.config.js --coverage"
+    "test:coverage": "jest --config jest.config.js --collectCoverage"
   },
   "repository": {
     "type": "git",
@@ -35,7 +35,6 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.7",
     "@types/redux-logger": "^3.0.7",
-    "@types/reselect": "^2.2.0",
     "dts-jest": "^23.0.0",
     "husky": "^1.3.1",
     "jest": "^24.7.1",
