--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "test": "jest --config jest.config.js --no-cache",
     "test:ci": "jest --config jest.config.js --collectCoverage --ci --runInBand --reporters=default --reporters=jest-junit",
     "test:watch": "jest --config jest.config.js --watch",
-    "test:coverage": "jest --config jest.config.js --collectCoverage"
+    "test:coverage": "jest --config jest.config.js --collectCoverage",
+    "preversion": "yarn test",
+    "postversion": "git push --tags && yarn publish . --tag $npm_package_version && git push && echo \"released version $npm_package_version!\""
   },
   "repository": {
     "type": "git",
