--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-orm-typesafe-schema",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "author": {
     "name": "Tomasz Zabłocki",
     "email": "tomasz.zablocki@gmail.com"
@@ -22,7 +22,9 @@
     "test": "jest --config jest.config.js --no-cache",
     "test:ci": "jest --config jest.config.js --collectCoverage --ci --runInBand --reporters=default --reporters=jest-junit",
     "test:watch": "jest --config jest.config.js --watch",
-    "test:coverage": "jest --config jest.config.js --collectCoverage"
+    "test:coverage": "jest --config jest.config.js --collectCoverage",
+    "preversion": "yarn test",
+    "postversion": "git push --tags && yarn publish . && git push"
   },
   "repository": {
     "type": "git",
