--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:watch": "jest --config jest.config.js --watch",
     "test:coverage": "jest --config jest.config.js --collectCoverage",
     "preversion": "yarn test",
-    "postversion": "git push --tags && yarn publish . && git push"
+    "postversion": "git push --tags && yarn publish . && git push",
+    "prepublish": "yarn tsc"
   },
   "repository": {
     "type": "git",
@@ -42,10 +43,10 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
-    "@types/node": "^11.13.7",
+    "@types/node": "^12.0.2",
     "@types/redux-logger": "^3.0.7",
     "dts-jest": "^23.0.0",
-    "husky": "^1.3.1",
+    "husky": "^2.3.0",
     "jest": "^24.7.1",
     "jest-junit": "^6.4.0",
     "jest-watch-suspend": "^1.1.2",
